--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-css-modules-transform": "^1.6.2"
   }
 }
